AG-13437 Fix required alignment in API table

--- a/documentation/ag-grid-docs/src/components/reference-documentation/components/ApiReference.module.scss
+++ b/documentation/ag-grid-docs/src/components/reference-documentation/components/ApiReference.module.scss
@@ -158,6 +158,11 @@
         position: absolute;
         bottom: -0.125em;
     }
+    span {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 }
 
 .parentProperties {
